Make header fixed and solid
It was too large and obtrusive on mobile, so I'm removing the sticky header. This also means that the header is solid instead of the translucent blur effect it used to have.

--- a/assets/css/partials/header.css
+++ b/assets/css/partials/header.css
@@ -3,8 +3,7 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--header-bg);
-    position: sticky;
+    background-color: var(--bg);
     top: 0;
     z-index: 999;
 }
